@@ -25,6 +25,13 @@ server.tomcat.accept-count = 8000
 server.max-http-header-size = 65536
 
 
- java -server -Xms1g -Xmx1g -XX:MetaspaceSize=2g -XX:MaxMetaspaceSize=2g -XX:+DisableExplicitGC -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:ParallelGCThreads=8 -XX:ConcGCThreads=8 -XX:InitiatingHeapOccupancyPercent=45 -XX:NewRatio=2 -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=15 -XX:G1ReservePercent=10 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/data/walkeureka/logs/ -Denv=fat -Ddubbo.reference.check=false  -javaagent:/home/wls81/tomcat/skywalking_agent/skywalking-agent.jar -Dskywalking.agent.service_name=walkingapigateway -jar /home/wls81/tomcat/walkeureka/walkeureka.jar
 
-java -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=85 -XX:MaxDirectMemorySize=512m -XX:+CMSParallelRemarkEnabled -XX:+UseParNewGC -server -Xms12G -Xmx12G -Dserver.port=9227 -javaagent:/home/wls81/tomcat/skywalking_agent/skywalking-agent.jar -Dskywalking.agent.service_name=walkingapigateway -jar /home/wls81/tomcat/walkingapigateway/walkingapigateway.jar
+
+
+/usr/java/jdk1.8.0_121/bin/java -server -XX:G1ReservePercent=10 -XX:+HeapDumpOnOutOfMemoryError -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=85 -XX:MaxDirectMemorySize=512m -XX:+CMSParallelRemarkEnabled -XX:+UseParNewGC -XX:PermSize=128m -XX:MaxPermSize=128m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=256m -Xms5G -Xmx5G -XX:NewSize=1g -XX:MaxNewSize=1g -Dserver.port=9213 -javaagent:/home/wls81/tomcat/skywalking_agent/skywalking-agent.jar -Dskywalking.agent.service_name=webconfig -jar /home/wls81/tomcat/webconfig/webconfig.jar
+
+
+http://i2.51cto.com/images/blog/201808/21/b116170771ecb3117ae7fead03fcaa0d.png?x-oss-process=image/watermark,size_16,text_QDUxQ1RP5Y2a5a6i,color_FFFFFF,t_100,g_se,x_10,y_10,shadow_90,type_ZmFuZ3poZW5naGVpdGk=
+
+
+
